k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: travel-web
  template:
    metadata:
      labels:
        app: travel-web
    spec:
      containers:
        - name: web
          image: REPLACE_IMAGE_NAME:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
