k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-web
spec:
  selector:
    app: travel-web
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
